// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BottomSheet snapshot 1`] = `
<View
  pointerEvents="box-none"
  style={
    {
      "backgroundColor": "transparent",
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
    testID="modal-safeArea"
  >
    <View
      accessibilityLiveRegion="polite"
      accessibilityViewIsModal={true}
      collapsable={false}
      style={
        {
          "backgroundColor": "#000000b3",
          "flex": 1,
          "opacity": 0,
        }
      }
      testID="modal-overlay"
    >
      <View
        collapsable={false}
        style={
          {
            "flex": 1,
            "marginTop": undefined,
            "transform": [
              {
                "translateY": 1334,
              },
            ],
          }
        }
        testID="modal-content"
      >
        <View
          accessibilityLabel="Fechar janela"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessible={true}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "flex": 1,
            }
          }
        />
        <View
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "justifyContent": "flex-end",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <RNCSafeAreaView
            edges={
              [
                "top",
              ]
            }
          />
          <View
            pointerEvents="box-none"
            style={
              {
                "backgroundColor": "#FFFFFF",
                "borderTopLeftRadius": 24,
                "borderTopRightRadius": 24,
                "flexShrink": 1,
                "width": "100%",
              }
            }
          >
            <RNCSafeAreaView
              edges={
                [
                  "bottom",
                ]
              }
            >
              <View>
                <RCTScrollView
                  bounces={false}
                  contentContainerStyle={
                    {
                      "padding": 28,
                    }
                  }
                >
                  <View>
                    <View
                      style={
                        {
                          "alignItems": "center",
                          "justifyContent": "center",
                          "marginBottom": 16,
                        }
                      }
                    >
                      <SvgMock />
                    </View>
                    <Text
                      allowFontScaling={false}
                      style={
                        {
                          "color": "#3E4149",
                          "flexShrink": 1,
                          "fontFamily": "Averta CY",
                          "fontSize": 23,
                          "fontWeight": "bold",
                          "letterSpacing": -0.02,
                          "lineHeight": 28,
                          "marginBottom": 12,
                          "textAlign": "left",
                        }
                      }
                    >
                      Title
                    </Text>
                    <Text
                      allowFontScaling={false}
                      style={
                        {
                          "color": "#676D79",
                          "flexShrink": 1,
                          "fontFamily": "Averta CY",
                          "fontSize": 16,
                          "fontWeight": "normal",
                          "letterSpacing": -0.02,
                          "lineHeight": 22,
                          "textAlign": "left",
                        }
                      }
                    >
                      Lorem ipsum is placeholder text commonly used in the graphic
                    </Text>
                    <View
                      style={
                        {
                          "marginTop": 40,
                        }
                      }
                    >
                      <View
                        style={{}}
                        testID="container-button"
                      >
                        <View
                          accessibilityState={
                            {
                              "busy": undefined,
                              "checked": undefined,
                              "disabled": undefined,
                              "expanded": undefined,
                              "selected": undefined,
                            }
                          }
                          accessibilityValue={
                            {
                              "max": undefined,
                              "min": undefined,
                              "now": undefined,
                              "text": undefined,
                            }
                          }
                          accessible={true}
                          collapsable={false}
                          focusable={true}
                          onClick={[Function]}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          style={
                            {
                              "alignItems": "center",
                              "backgroundColor": "#013188",
                              "borderRadius": 12,
                              "borderWidth": 0,
                              "display": "flex",
                              "height": 64,
                              "justifyContent": "center",
                              "marginTop": 0,
                              "minWidth": 64,
                              "opacity": 1,
                              "paddingHorizontal": 32,
                            }
                          }
                        >
                          <Text
                            allowFontScaling={false}
                            style={
                              {
                                "color": "#FFFFFF",
                                "flexShrink": 1,
                                "fontFamily": "Averta CY",
                                "fontSize": 16,
                                "fontWeight": "bold",
                                "letterSpacing": -0.02,
                                "lineHeight": 19,
                              }
                            }
                            testID="text-with-icon"
                          >
                            Action 1
                          </Text>
                        </View>
                      </View>
                      <View
                        style={{}}
                        testID="container-button"
                      >
                        <View
                          accessibilityState={
                            {
                              "busy": undefined,
                              "checked": undefined,
                              "disabled": undefined,
                              "expanded": undefined,
                              "selected": undefined,
                            }
                          }
                          accessibilityValue={
                            {
                              "max": undefined,
                              "min": undefined,
                              "now": undefined,
                              "text": undefined,
                            }
                          }
                          accessible={true}
                          collapsable={false}
                          focusable={true}
                          onClick={[Function]}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          style={
                            {
                              "alignItems": "center",
                              "backgroundColor": "transparent",
                              "borderRadius": 12,
                              "borderWidth": 0,
                              "display": "flex",
                              "height": 48,
                              "justifyContent": "center",
                              "marginTop": 16,
                              "minWidth": 48,
                              "opacity": 1,
                              "paddingHorizontal": 24,
                            }
                          }
                        >
                          <Text
                            allowFontScaling={false}
                            style={
                              {
                                "color": "#A4A7AF",
                                "flexShrink": 1,
                                "fontFamily": "Averta CY",
                                "fontSize": 16,
                                "fontWeight": "bold",
                                "letterSpacing": -0.02,
                                "lineHeight": 19,
                              }
                            }
                            testID="text-with-icon"
                          >
                            Action 2
                          </Text>
                        </View>
                      </View>
                    </View>
                  </View>
                </RCTScrollView>
                <View
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={false}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "opacity": 1,
                      "position": "absolute",
                      "right": 20,
                      "top": 20,
                    }
                  }
                >
                  <SvgMock
                    height={36}
                    width={36}
                  />
                </View>
              </View>
            </RNCSafeAreaView>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`BottomSheet snapshot dismissible false 1`] = `
<View
  pointerEvents="box-none"
  style={
    {
      "backgroundColor": "transparent",
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
    testID="modal-safeArea"
  >
    <View
      accessibilityLiveRegion="polite"
      accessibilityViewIsModal={true}
      collapsable={false}
      style={
        {
          "backgroundColor": "#000000b3",
          "flex": 1,
          "opacity": 0,
        }
      }
      testID="modal-overlay"
    >
      <View
        collapsable={false}
        style={
          {
            "flex": 1,
            "marginTop": undefined,
            "transform": [
              {
                "translateY": 1334,
              },
            ],
          }
        }
        testID="modal-content"
      >
        <View
          accessibilityLabel="Fechar janela"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessible={true}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "flex": 1,
            }
          }
        />
        <View
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "justifyContent": "flex-end",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <RNCSafeAreaView
            edges={
              [
                "top",
              ]
            }
          />
          <View
            pointerEvents="box-none"
            style={
              {
                "backgroundColor": "#FFFFFF",
                "borderTopLeftRadius": 24,
                "borderTopRightRadius": 24,
                "flexShrink": 1,
                "width": "100%",
              }
            }
          >
            <RNCSafeAreaView
              edges={
                [
                  "bottom",
                ]
              }
            >
              <View>
                <RCTScrollView
                  bounces={false}
                  contentContainerStyle={
                    {
                      "padding": 28,
                    }
                  }
                >
                  <View>
                    <Text
                      allowFontScaling={false}
                      style={
                        {
                          "color": "#3E4149",
                          "flexShrink": 1,
                          "fontFamily": "Averta CY",
                          "fontSize": 23,
                          "fontWeight": "bold",
                          "letterSpacing": -0.02,
                          "lineHeight": 28,
                          "marginBottom": 12,
                          "textAlign": "left",
                        }
                      }
                    >
                      Title
                    </Text>
                    <Text
                      allowFontScaling={false}
                      style={
                        {
                          "color": "#676D79",
                          "flexShrink": 1,
                          "fontFamily": "Averta CY",
                          "fontSize": 16,
                          "fontWeight": "normal",
                          "letterSpacing": -0.02,
                          "lineHeight": 22,
                          "textAlign": "left",
                        }
                      }
                    >
                      Lorem ipsum is placeholder text commonly used in the graphic
                    </Text>
                    <View
                      style={
                        {
                          "marginTop": 40,
                        }
                      }
                    >
                      <View
                        style={{}}
                        testID="container-button"
                      >
                        <View
                          accessibilityState={
                            {
                              "busy": undefined,
                              "checked": undefined,
                              "disabled": undefined,
                              "expanded": undefined,
                              "selected": undefined,
                            }
                          }
                          accessibilityValue={
                            {
                              "max": undefined,
                              "min": undefined,
                              "now": undefined,
                              "text": undefined,
                            }
                          }
                          accessible={true}
                          collapsable={false}
                          focusable={true}
                          onClick={[Function]}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          style={
                            {
                              "alignItems": "center",
                              "backgroundColor": "#013188",
                              "borderRadius": 12,
                              "borderWidth": 0,
                              "display": "flex",
                              "height": 64,
                              "justifyContent": "center",
                              "marginTop": 0,
                              "minWidth": 64,
                              "opacity": 1,
                              "paddingHorizontal": 32,
                            }
                          }
                        >
                          <Text
                            allowFontScaling={false}
                            style={
                              {
                                "color": "#FFFFFF",
                                "flexShrink": 1,
                                "fontFamily": "Averta CY",
                                "fontSize": 16,
                                "fontWeight": "bold",
                                "letterSpacing": -0.02,
                                "lineHeight": 19,
                              }
                            }
                            testID="text-with-icon"
                          >
                            Action 1
                          </Text>
                        </View>
                      </View>
                    </View>
                  </View>
                </RCTScrollView>
              </View>
            </RNCSafeAreaView>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`BottomSheet snapshot invisible 1`] = `null`;
